Updates on language setup

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -95,5 +95,8 @@
   "thu": "خم",
   "fri": "جم",
   "sat": "سبت",
-  "sun": "أحد"
+  "sun": "أحد",
+  "weekly average tempreture": "متوسط درجات الحرارة خلال هذا الاسبوع",
+  "m/s": "متر/ثانية",
+  "select location": "اختر الموقع"
 }
