--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -95,5 +95,8 @@
   "thu": "Thu",
   "fri": "Fri",
   "sat": "Sat",
-  "sun": "Sun"
+  "sun": "Sun",
+  "weekly average tempreture": "Weekly Average Tempreture",
+  "m/s": "m/s",
+  "select location": "Select Location"
 }
